[package]
name = "tsunagu"
version = "0.1.1"
edition = "2024"
rust-version = "1.89.0"
description = "Tsunagu (繋ぐ) — service/daemon IPC framework: Unix sockets, health checks, process management"
homepage = "https://github.com/pleme-io/tsunagu"
repository = "https://github.com/pleme-io/tsunagu"
documentation = "https://docs.rs/tsunagu"
readme = "README.md"
license = "MIT"
categories = ["network-programming"]
keywords = ["ipc", "daemon", "service", "unix-socket", "health"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[features]
default = []
# `/health`, `/readiness`, `/liveness` axum router for daemons that want
# a drop-in HTTP health surface. Off by default so CLI consumers don't
# pull in the axum + tower dep graph.
axum = ["dep:axum"]
# `tsunagu::tracing_init` — one-line `tracing_subscriber` bootstrap that
# subsumes the 90+ hand-rolled `EnvFilter::try_from_default_env()
# .unwrap_or_else(...)` blocks across the pleme-io fleet. Off by default
# so library consumers don't pull `tracing-subscriber` into their
# closure; binaries opt in.
tracing-init = ["dep:tracing-subscriber"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"], optional = true }
thiserror = "2"
dirs = "6.0"
tokio = { version = "1", features = ["rt", "net", "signal", "sync", "macros", "time", "io-util"] }
axum = { version = "0.8", optional = true }

[dev-dependencies]
libc = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "test-util", "macros"] }
# tower::ServiceExt::oneshot is how we exercise axum routers in tests
# without binding a socket.
tower = { version = "0.5", features = ["util"] }
